; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/locale/extr_mbsrtowcs.c_mbsrtowcs.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/locale/extr_mbsrtowcs.c_mbsrtowcs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mbsrtowcs(i32* noalias %0, i8** noalias %1, i64 %2, i32* noalias %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i8**, i8*** %6, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = call i32 (...) @__get_locale()
  %14 = call i64 @mbsrtowcs_l(i32* %9, i8** %10, i64 %11, i32* %12, i32 %13)
  ret i64 %14
}

declare dso_local i64 @mbsrtowcs_l(i32*, i8**, i64, i32*, i32) #1

declare dso_local i32 @__get_locale(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
